- invalidate mirror list cache when it's an old format (ie one which does not 
  store the time of product.id)
- fix urpmq --sources documentation (in --help)
- do not advise to reboot when inside a chroot
- do not cache media.cfg from the media when using a virtual one (ie a
  medium for which we don't want to cache metadata)
- ignore gpg_pubkey packages in urpmq --not-available

Version 6.32 - 29 October 2009

- if package B obsoletes package A and if A is in potential orphans and B is
  already installed, don't unconditionally mark B as a potential orphan,
  fixes #54590
- make aria2 disabling work in all cases, should fix #53434 for good.

Version 6.31 - 21 October 2009

- don't use aria2 when loading mirrorlist from api.mandriva.com, fixes #53434
- add --not-available option to urpmq to get a list of packages that are
  installed but not available from any configured media (Pascal Terjan,
  fixes #51418)

Version 6.30.1 - 19 October 2009

- add --download-all option to gurpmi too

Version 6.30 - 16 October 2009

- unbreak kernel orphans management (broken by #53425 fix)
- improve messages asking to restart system/session (#53126)
- add --download-all option to download all packages before attempting
  to start installation
- fix priviledge escalation in rurpmi and rurpme (#54568)
- when the database is locked, print the PID of the processus locking it
 (#38923, Pascal Terjan)

Version 6.29 - 5 October 2009

- downgrade skipped package log message to debug message
- make sure we don't check certificate in aria2 except when we want to
- exclude kernel-source from orphan processing (#53426)
- do not list as orphans kernel packages which where not installed through
  dependencies (#53425)

Version 6.28.1 - 3 September 2009

- prevent creating empty "/url" (#53097)

Version 6.28 - 31 August 2009

- urpmi.addmedia:
  o use https when downloading the mirror list from api.mandriva.com, and 
- orphans handling