@@ -5,6 +5,7 @@
 - do not cache media.cfg from the media when using a virtual one (ie a
   medium for which we don't want to cache metadata)
 - ignore gpg_pubkey packages in urpmq --not-available
+- fix not being able to remove orphan kernels due to dkms packages (#53414)
 
 Version 6.32 - 29 October 2009
 
